--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,10 @@
     "google-spreadsheet": "^4.1.1",
     "googleapis": "^129.0.0",
     "jsonwebtoken": "^9.0.2",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "sequelize": "^6.37.1",
+    "sqlite3": "^5.1.7",
+    "body-parser": "^1.20.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
