--- a/package.json
+++ b/package.json
@@ -3,21 +3,25 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "server/index.js",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 5173 --strictPort",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "server": "node --experimental-specifier-resolution=node server/index.js",
-    "start": "concurrently \"npm run server\" \"npm run dev\""
+    "start": "node --experimental-specifier-resolution=node server/index.js",
+    "postinstall": "npm run build"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
