--- a/server/package.json
+++ b/server/package.json
@@ -10,17 +10,18 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "google-auth-library": "^9.15.0",
     "google-spreadsheet": "^4.1.1",
     "googleapis": "^129.0.0",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
     "sequelize": "^6.37.1",
-    "sqlite3": "^5.1.7",
-    "body-parser": "^1.20.2"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
