--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 PORT=3000
 JWT_SECRET=your_jwt_secret_here
-DATABASE_URL=sqlite:./database.sqlite
+DATABASE_URL=postgresql://chatbot_bd_user:kPmqEtee0DjQ9LqI3qMZ15UwZQWyNjof@dpg-cu1v0od2ng1s73eg4nhg-a.oregon-postgres.render.com/chatbot_bd
 NODE_ENV=production
