--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,12 @@
+# Puerto del servidor
 PORT=3001
-GOOGLE_SHEET_ID=your-sheet-id
-GOOGLE_SERVICE_ACCOUNT_EMAIL=your-service-account-email
-GOOGLE_PRIVATE_KEY=your-private-key
-JWT_SECRET=your-jwt-secret
+
+# Secreto para JWT
+JWT_SECRET=tu_secreto_jwt
+
+# URL de la base de datos (SQLite por defecto, descomentar PostgreSQL para usar)
+DATABASE_URL=postgres://usuario:contraseña@host:puerto/nombre_base_datos
+# DATABASE_URL=sqlite:./database.sqlite
+
+# Otras configuraciones
+NODE_ENV=development
