--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.1",
     "sqlite3": "^5.1.7"
   },
