--- a/package.json
+++ b/package.json
@@ -9,20 +9,29 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "node --experimental-specifier-resolution=node server/index.js",
-    "start": "node --experimental-specifier-resolution=node server/index.js",
+    "server": "node server/index.js",
+    "start": "node server/index.js",
     "postinstall": "npm run build"
   },
   "dependencies": {
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.7",
     "express": "^4.18.3",
+    "google-auth-library": "^9.15.0",
+    "google-spreadsheet": "^4.1.1",
+    "googleapis": "^129.0.0",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
