--- a/public/staticwebapp.config.json
+++ b/public/staticwebapp.config.json
@@ -1,6 +1,18 @@
 {
   "navigationFallback": {
     "rewrite": "/index.html",
-    "exclude": ["/images/*", "/css/*", "/js/*"]
-  }
+    "exclude": ["/images/*", "/css/*", "/js/*", "/api/*"]
+  },
+  "routes": [
+    {
+      "route": "/admin/*",
+      "serve": "/index.html",
+      "statusCode": 200
+    },
+    {
+      "route": "/*",
+      "serve": "/index.html",
+      "statusCode": 200
+    }
+  ]
 }
