--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite --port 5173 --strictPort",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
+    "preview": "vite preview --host --port $PORT",
     "server": "node server/index.js",
     "start": "node server/index.js",
     "postinstall": "npm run build"
