--- a/render.yaml
+++ b/render.yaml
@@ -33,8 +33,20 @@ services:
         value: 18.17.0
       - key: VITE_API_URL
         value: https://juzgadobot.onrender.com
+    headers:
+      - path: /*
+        name: Cache-Control
+        value: no-cache, no-store, must-revalidate
+      - path: /*
+        name: X-Frame-Options
+        value: DENY
     routes:
       - type: rewrite
         source: /*
         destination: /index.html
- 
+      - type: rewrite
+        source: /admin
+        destination: /index.html
+      - type: rewrite
+        source: /admin/*
+        destination: /index.html
