--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview --host --port $PORT",
     "server": "node server/index.js",
-    "start": "node server/index.js",
+    "start": "node server.js",
     "postinstall": "npm run build"
   },
   "dependencies": {
@@ -20,7 +20,7 @@
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
-    "express": "^4.18.3",
+    "express": "^4.18.2",
     "google-auth-library": "^9.15.0",
     "google-spreadsheet": "^4.1.1",
     "googleapis": "^129.0.0",
@@ -30,6 +30,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
+    "path": "^0.12.7",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "react": "^18.3.1",
