--- a/public/staticwebapp.config.json
+++ b/public/staticwebapp.config.json
@@ -1,18 +1,16 @@
 {
   "navigationFallback": {
     "rewrite": "/index.html",
-    "exclude": ["/images/*", "/css/*", "/js/*", "/api/*"]
+    "exclude": ["/images/*.{png,jpg,gif}", "/css/*", "/api/*"]
   },
   "routes": [
     {
-      "route": "/admin/*",
-      "serve": "/index.html",
-      "statusCode": 200
+      "route": "/admin",
+      "rewrite": "/index.html"
     },
     {
-      "route": "/*",
-      "serve": "/index.html",
-      "statusCode": 200
+      "route": "/admin/*",
+      "rewrite": "/index.html"
     }
   ]
 }
